<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tonight"
            android:checked="true"
            android:icon="@drawable/ic_today_white_36dp"
            android:title="@string/tonight" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_location_on_white_36dp"
            android:title="@string/places" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_white_36dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_help_feedback"
            android:icon="@drawable/ic_help_white_36dp"
            android:title="@string/help_and_feedback" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_36dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_transport"
            android:title="@string/transport">
            <menu>
                <item
                    android:id="@+id/nav_uber"
                    android:icon="@drawable/ic_directions_car_white_36dp"
                    android:title="@string/uber" />
                <item
                    android:id="@+id/nav_safeboda"
                    android:icon="@drawable/ic_motorcycle_white_36dp"
                    android:title="@string/safeboda" />
            </menu>
        </item>
    </group>
</menu>