<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bandorestech.ebaala.activities.PlaceDetails"
    tools:showIn="@layout/place_details_activity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/place_details_header_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/open_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_below="@+id/food_tv"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="12dp"
                android:text="@string/open_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                android:textStyle="normal|italic"
                android:typeface="sans" />

            <TextView
                android:id="@+id/place_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/rating_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@+id/rating_tv"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:maxWidth="300dp"
                android:text="@string/sample_place_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/sample_rating"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/hapennig_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/place_name_tv"
                android:layout_alignStart="@+id/place_name_tv"
                android:layout_below="@+id/place_name_tv"
                android:layout_marginBottom="4dp"
                android:text="@string/sample_happening"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                android:textStyle="normal|italic"
                android:typeface="sans" />

            <TextView
                android:id="@+id/services_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/hapennig_tv"
                android:layout_alignStart="@+id/hapennig_tv"
                android:layout_below="@+id/hapennig_tv"
                android:layout_marginBottom="8dp"
                android:text="@string/sample_services"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                android:textStyle="normal|italic"
                android:typeface="sans" />

            <TextView
                android:id="@+id/tags_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/services_tv"
                android:layout_alignStart="@+id/services_tv"
                android:layout_below="@+id/services_tv"
                android:layout_marginBottom="4dp"
                android:text="@string/sample_tags"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                android:textStyle="normal|italic"
                android:typeface="sans" />

            <TextView
                android:id="@+id/beers_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/shots_tv"
                android:layout_below="@+id/tags_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@+id/shots_tv"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:maxWidth="300dp"
                android:text="@string/sample_beers"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/shots_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tags_tv"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:text="@string/sample_shots"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/food_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/shots_tv"
                android:layout_below="@+id/beers_tv"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@+id/shots_tv"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:maxWidth="300dp"
                android:text="@string/sample_food"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="14sp"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/address_icon_iv"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@id/food_tv"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/address_icon"
                app:srcCompat="@drawable/ic_location_on_black_36px" />

            <TextView
                android:id="@+id/address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/address_icon_iv"
                android:layout_below="@+id/food_tv"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/address_icon_iv"
                android:layout_toRightOf="@+id/address_icon_iv"
                android:text="@string/sample_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:typeface="sans" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/events_rv"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/place_details_header_rv">

            <ExpandableListView
                android:id="@+id/event_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ExpandableListView
                android:id="@+id/open_close_list"
                android:layout_below="@+id/event_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>