<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    >

    <TextView
        android:id="@+id/place_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rating_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/rating_tv"
        android:ellipsize="end"
        android:maxLength="34"
        android:text="@string/sample_place_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tags_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_name_tv"
        android:ellipsize="end"
        android:maxLength="52"
        android:text="@string/sample_tags"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="normal|italic"
        android:typeface="sans" />

    <TextView
        android:id="@+id/rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/sample_rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:typeface="sans" />
    <!--<View-->
    <!--android:background="@color/colorSecondary"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1px"-->
    <!--android:layout_below="@+id/tags_tv"-->
    <!--/>-->

</RelativeLayout>