<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    >

    <TextView
        android:id="@+id/event_day"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/event_rv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Wed"
        android:textColor="#0c5462"/>

    <RelativeLayout
        android:id="@+id/event_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLength="34"
            android:text="@string/sample_event_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_name"
            android:ellipsize="end"
            android:maxLength="52"
            android:text="@string/sample_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="12sp"
            android:textStyle="normal|italic"
            android:typeface="sans"
            android:textColor="@color/coolBrown"/>

        <TextView
            android:id="@+id/happeningtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/event_time"
            android:layout_below="@+id/event_name"
            android:layout_marginLeft="12dp"
            android:text="@string/sample_shots"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/coolBrownDark"
            android:textSize="12sp"
            android:typeface="sans" />
    </RelativeLayout>
</RelativeLayout>